[package]
name = "gdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dotenv = "0.15.0"
indicatif = "0.17.5"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
serde_with = "3.1.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
